# slambook2

Docker/: Dockerfile  run_dev.sh
ch13/: CMakeLists.txt
ch13/app/: run_kitti_stereo.cpp
ch13/config/: botanic_garden_default.yaml  default.yaml
ch13/include/myslam/: algorithm.h  bundle_adjustment.h  common_include.h  dataset.h  frame.h  frontend.h  g2o_types.h  map.h  viewer.h
ch13/src/: config.cpp  dataset.cpp  frontend.cpp  viewer.cpp  visual_odometry.cpp
ch5/imageBasics/: imageBasics.cpp  undistortImage.cpp
ch7/: CMakeLists.txt  pose_estimation_3d2d.cpp
ch8/: 1666059839850277901.tiff  CMakeLists.txt  direct_method.cpp  direct_method_for_botanic_garden.cpp  p4_Ceres_direct_method.cpp
